# s-mouse

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/core/: CMakeLists.txt  client.cpp  client.h  clipboard.cpp  clipboard.h  keymap.cpp  keymap.h  protocol.cpp  protocol.h  screen_layout.cpp  screen_layout.h  server.cpp  server.h
src/daemon/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  screen_editor.cpp  screen_editor.h  settings_dialog.cpp  settings_dialog.h  tray_icon.cpp  tray_icon.h
src/net/: CMakeLists.txt  ble_proximity.cpp  ble_proximity.h  discovery.cpp  discovery.h  net_compat.h  tcp_connection.cpp  tcp_connection.h  tls_context.cpp  tls_context.h  udp_channel.cpp  udp_channel.h
src/platform/: CMakeLists.txt  platform.h
src/platform/macos/: macos_ble.mm  macos_clipboard.mm  macos_input_capture.h  macos_input_capture.mm  macos_input_inject.mm  macos_screen.mm
src/platform/windows/: win_clipboard.cpp  win_input_capture.cpp  win_input_inject.cpp  win_screen.cpp
tests/: CMakeLists.txt  test_net.cpp  test_protocol.cpp  test_screen_layout.cpp
